add cases and appendix
