# docs/swagger.json
@@ -13,6 +13,41 @@
         "version": "0.0.2"
     },
     "paths": {
+        "/api/auth/captcha/:id": {
+            "get": {
+                "description": "获取验证码",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "captcha"
+                ],
+                "summary": "获得验证码",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "验证码id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "同时返回验证码的时间戳、base64化图片、验证码challenge指令",
+                        "schema": {
+                            "$ref": "#/definitions/vo.CommonData"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/vo.Common"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/login": {
             "post": {
                 "description": "用户登录并获得token以及失效日期",
@@ -96,8 +131,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "test",
-                    "index"
+                    "utils"
                 ],
                 "summary": "上传资源",
                 "parameters": [
@@ -197,6 +231,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "user"
+                ],
                 "summary": "获取用户信息",
                 "responses": {
                     "200": {
@@ -222,6 +259,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "user"
                 ],
                 "summary": "修改密码",
                 "parameters": [
@@ -289,6 +329,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "user"
                 ],
                 "summary": "修改用户基础信息（邮箱和密码）",
                 "parameters": [
